SegmentControl 변화에 따른 화면 전환 구현
datesource를 나눠 segment변화하면 화면도 바뀌도록 구현

--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -113,6 +113,9 @@
                                     <segment title="오리지날"/>
                                     <segment title="라이브"/>
                                 </segments>
+                                <connections>
+                                    <action selector="changeSegment:" destination="BYZ-38-t0r" eventType="valueChanged" id="z4q-w6-SNx"/>
+                                </connections>
                             </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
