--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -37,32 +37,35 @@
                                             <rect key="frame" x="0.0" y="0.0" width="371" height="392"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="live01" translatesAutoresizingMaskIntoConstraints="NO" id="01U-re-R4D">
-                                                    <rect key="frame" x="8" y="5" width="355" height="270"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="live01" translatesAutoresizingMaskIntoConstraints="NO" id="01U-re-R4D">
+                                                    <rect key="frame" x="8" y="8" width="355" height="199.66666666666666"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="01U-re-R4D" secondAttribute="height" multiplier="16:9" id="jcd-a4-RNF"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SoQ-qK-k5t">
-                                                    <rect key="frame" x="8" y="285" width="363" height="65"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SoQ-qK-k5t">
+                                                    <rect key="frame" x="8" y="212.66666666666663" width="363" height="152.33333333333337"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z5v-0z-rtH">
-                                                    <rect key="frame" x="8" y="328" width="363" height="53"/>
+                                                    <rect key="frame" x="8" y="370" width="363" height="17"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ChannelName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45B-AQ-DfT">
-                                                            <rect key="frame" x="0.0" y="18" width="90.666666666666671" height="17"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="90.666666666666671" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="▶︎ view" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wa4-cx-3NS">
-                                                            <rect key="frame" x="100.66666666666667" y="0.0" width="44.333333333333329" height="53"/>
+                                                            <rect key="frame" x="100.66666666666667" y="0.0" width="44.333333333333329" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="• createTime" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLa-oR-ctJ">
-                                                            <rect key="frame" x="155" y="18" width="81.666666666666686" height="17"/>
+                                                            <rect key="frame" x="155" y="0.0" width="81.666666666666686" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -70,13 +73,13 @@
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="bottom" secondItem="xLa-oR-ctJ" secondAttribute="bottom" constant="18" id="Iio-1Y-hu5"/>
-                                                        <constraint firstAttribute="bottom" secondItem="45B-AQ-DfT" secondAttribute="bottom" constant="18" id="Lfq-Pp-fxv"/>
+                                                        <constraint firstAttribute="bottom" secondItem="45B-AQ-DfT" secondAttribute="bottom" id="Lfq-Pp-fxv"/>
                                                         <constraint firstItem="45B-AQ-DfT" firstAttribute="leading" secondItem="z5v-0z-rtH" secondAttribute="leading" id="NPg-2k-raE"/>
                                                         <constraint firstItem="xLa-oR-ctJ" firstAttribute="leading" secondItem="Wa4-cx-3NS" secondAttribute="trailing" constant="10" id="Paw-yc-qgz"/>
-                                                        <constraint firstItem="45B-AQ-DfT" firstAttribute="top" secondItem="z5v-0z-rtH" secondAttribute="top" constant="18" id="Vea-tG-ZPh"/>
-                                                        <constraint firstItem="xLa-oR-ctJ" firstAttribute="top" secondItem="z5v-0z-rtH" secondAttribute="top" constant="18" id="bfX-WA-VUx"/>
+                                                        <constraint firstItem="45B-AQ-DfT" firstAttribute="top" secondItem="z5v-0z-rtH" secondAttribute="top" id="Vea-tG-ZPh"/>
                                                         <constraint firstAttribute="bottom" secondItem="Wa4-cx-3NS" secondAttribute="bottom" id="bxt-hR-hTG"/>
+                                                        <constraint firstItem="xLa-oR-ctJ" firstAttribute="top" secondItem="z5v-0z-rtH" secondAttribute="top" id="dar-UE-X7z"/>
+                                                        <constraint firstAttribute="bottom" secondItem="xLa-oR-ctJ" secondAttribute="bottom" id="jx9-XS-fwI"/>
                                                         <constraint firstItem="Wa4-cx-3NS" firstAttribute="leading" secondItem="45B-AQ-DfT" secondAttribute="trailing" constant="10" id="nQR-xx-6la"/>
                                                         <constraint firstItem="Wa4-cx-3NS" firstAttribute="top" secondItem="z5v-0z-rtH" secondAttribute="top" id="uOk-vD-mzS"/>
                                                     </constraints>
@@ -87,9 +90,9 @@
                                         <constraints>
                                             <constraint firstItem="01U-re-R4D" firstAttribute="top" secondItem="Ry7-YJ-ivF" secondAttribute="topMargin" id="5Xw-BD-yTu"/>
                                             <constraint firstAttribute="trailing" secondItem="z5v-0z-rtH" secondAttribute="trailing" id="76d-WH-XoZ"/>
-                                            <constraint firstAttribute="bottom" secondItem="z5v-0z-rtH" secondAttribute="bottom" constant="11" id="Fd6-0C-Wji"/>
+                                            <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="z5v-0z-rtH" secondAttribute="bottom" constant="5" id="Fd6-0C-Wji"/>
                                             <constraint firstItem="SoQ-qK-k5t" firstAttribute="leading" secondItem="01U-re-R4D" secondAttribute="leading" id="HQi-3i-Tzt"/>
-                                            <constraint firstItem="SoQ-qK-k5t" firstAttribute="top" secondItem="01U-re-R4D" secondAttribute="bottom" constant="10" id="IUS-AB-QV8"/>
+                                            <constraint firstItem="SoQ-qK-k5t" firstAttribute="top" secondItem="01U-re-R4D" secondAttribute="bottom" constant="5" id="IUS-AB-QV8"/>
                                             <constraint firstAttribute="trailing" secondItem="SoQ-qK-k5t" secondAttribute="trailing" id="WK6-4J-nD9"/>
                                             <constraint firstItem="01U-re-R4D" firstAttribute="leading" secondItem="Ry7-YJ-ivF" secondAttribute="leadingMargin" id="aWR-Bc-0Db"/>
                                             <constraint firstItem="z5v-0z-rtH" firstAttribute="top" secondItem="SoQ-qK-k5t" secondAttribute="bottom" constant="5" id="fOR-YN-tTL"/>
