--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -9,15 +9,15 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--kakaoTV-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="TVCollectionViewController" customModule="TVApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="backgroundView" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UYS-6b-7h3">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" restorationIdentifier="CollectionView" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="UYS-6b-7h3" customClass="MyCollectionView" customModule="TVApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="189" width="375" height="589"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2us-6s-66P">
@@ -27,7 +27,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TVCell" id="oco-4c-9fb" customClass="TVCollectionViewCell" customModule="TVApp" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="TVCell" reuseIdentifier="TVCell" id="oco-4c-9fb" customClass="TVCollectionViewCell" customModule="TVApp" customModuleProvider="target">
                                         <rect key="frame" x="19.666666666666668" y="0.0" width="336" height="291"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1Am-Ex-3fp">
@@ -46,6 +46,7 @@
                                 </segments>
                                 <connections>
                                     <action selector="segmentControlChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="SXC-T6-JeH"/>
+                                    <action selector="segmentControlChanged:" destination="dkx-z0-nzr" eventType="valueChanged" id="oHU-Ps-rte"/>
                                 </connections>
                             </segmentedControl>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="66U-6Q-hY8">
@@ -83,7 +84,7 @@
                             <constraint firstItem="UYS-6b-7h3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n8t-lK-iiT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="NgV-ND-qhp"/>
+                    <navigationItem key="navigationItem" title="kakaoTV" id="NgV-ND-qhp"/>
                     <connections>
                         <outlet property="TVCollectionView" destination="UYS-6b-7h3" id="sV0-a6-gtn"/>
                         <outlet property="segmentControl" destination="jgu-rY-ZzZ" id="nuA-hU-avV"/>
