--- a/TVApp/TVApp/Base.lproj/Main.storyboard
+++ b/TVApp/TVApp/Base.lproj/Main.storyboard
@@ -49,39 +49,27 @@
                                     <action selector="segmentControlChanged:" destination="dkx-z0-nzr" eventType="valueChanged" id="oHU-Ps-rte"/>
                                 </connections>
                             </segmentedControl>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="66U-6Q-hY8">
-                                <rect key="frame" x="0.0" y="88" width="375" height="51"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hw6-Jd-fSH">
-                                        <rect key="frame" x="38" y="8" width="298" height="34"/>
-                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="XOM-Ej-cAD">
+                                <rect key="frame" x="16" y="88" width="343" height="50"/>
                                 <constraints>
-                                    <constraint firstItem="Hw6-Jd-fSH" firstAttribute="leading" secondItem="66U-6Q-hY8" secondAttribute="leading" constant="38" id="Amz-yh-HHp"/>
-                                    <constraint firstItem="Hw6-Jd-fSH" firstAttribute="top" secondItem="66U-6Q-hY8" secondAttribute="top" constant="8" id="DRg-TZ-KgI"/>
-                                    <constraint firstAttribute="bottom" secondItem="Hw6-Jd-fSH" secondAttribute="bottom" constant="9" id="Ysd-nO-vdg"/>
-                                    <constraint firstAttribute="trailing" secondItem="Hw6-Jd-fSH" secondAttribute="trailing" constant="39" id="sTn-EF-RpE"/>
-                                    <constraint firstAttribute="height" constant="51" id="tyZ-0H-hGB"/>
+                                    <constraint firstAttribute="height" constant="50" id="9Or-XK-Y8J"/>
                                 </constraints>
-                            </view>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="jgu-rY-ZzZ" firstAttribute="top" secondItem="66U-6Q-hY8" secondAttribute="bottom" constant="12" id="0t5-Nb-wNF"/>
+                            <constraint firstItem="jgu-rY-ZzZ" firstAttribute="top" secondItem="XOM-Ej-cAD" secondAttribute="bottom" constant="13" id="E4X-7h-CRY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XOM-Ej-cAD" secondAttribute="trailing" constant="16" id="HmH-yi-rSj"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="UYS-6b-7h3" secondAttribute="bottom" id="Jwq-iH-65K"/>
                             <constraint firstItem="jgu-rY-ZzZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="122" id="LeQ-Cv-YXj"/>
-                            <constraint firstItem="66U-6Q-hY8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Pcf-US-qaO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jgu-rY-ZzZ" secondAttribute="trailing" constant="122" id="QAn-k8-PZ8"/>
-                            <constraint firstItem="66U-6Q-hY8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="c1S-c2-wUU"/>
                             <constraint firstItem="UYS-6b-7h3" firstAttribute="top" secondItem="jgu-rY-ZzZ" secondAttribute="bottom" constant="7" id="gLQ-Gd-vTN"/>
-                            <constraint firstItem="66U-6Q-hY8" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gYL-Bq-4Kr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UYS-6b-7h3" secondAttribute="trailing" id="kTA-6w-shb"/>
                             <constraint firstItem="UYS-6b-7h3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n8t-lK-iiT"/>
+                            <constraint firstItem="XOM-Ej-cAD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="sCO-iM-mku"/>
+                            <constraint firstItem="XOM-Ej-cAD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="u6e-V2-baM"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="kakaoTV" id="NgV-ND-qhp"/>
@@ -102,6 +90,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Dik-tE-A5f">
                         <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" systemColor="systemGrayColor"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -117,11 +106,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
